# income-calc

./: README.md  nuxt.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  types.d.ts
.claude/: settings.local.json
app/: app.vue
app/components/: SalaryCalculator.vue
app/stores/: insuranceData.json
components/: SalaryCalculator.vue
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: SalaryCalculator.vue
src/utils/: taxCalculator.ts
