[package]
name = "个税计算器"
version = "1.0.0"
description = "工资个税计算器 - 一个可以精确到分的税后收入计算器"
authors = ["ikiwi"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = ["config-json"] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["config-toml"] }
tauri-plugin-log = "2.8.0"
